Fix misaligned radio buttons.

--- a/_forms.scss
+++ b/_forms.scss
@@ -118,8 +118,8 @@
   input[type="radio"]:checked + label:after {
     content: '';
     border-radius: 4px;
-    top: 4px;
-    left: 4px;
+    top: 5px;
+    left: 5px;
     background: $color-brand;
   }
 
